Update package details

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "id": "new-zettel",
-    "name": "New Zettel",
+    "id": "luhman",
+    "name": "Luhman",
     "version": "1.0.0",
     "minAppVersion": "0.11.13",
-    "description": "Shows the first markdown header of a note in the file explorer",
+    "description": "Commands for handling a zettelkasten with Luhman-style IDs as filenames",
     "author": "Dylan Elliott",
     "authorUrl": "https://github.com/dyldog",
     "isDesktopOnly": false
