--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "luhman",
-    "version": "1.1.3",
+    "version": "1.1.0",
     "description": "Commands for handling a zettelkasten with Luhmann-style IDs as filenames",
     "main": "main.js",
     "scripts": {
         "prettier": "prettier --write 'src/**/*.+(ts|tsx|json|html|css)'",
         "lint": "eslint . --ext .ts,.tsx --fix",
         "dev": "rollup --config rollup.config.js -w",
-        "release": "dotenv release-it --'plugins.@release-it/bumper.out=\"manifest.json\"'",
-        "release-beta": "dotenv release-it --'plugins.@release-it/bumper.out=\"manifest-beta.json\"'",
+        "release": "dotenv release-it",
+        "release-beta": "dotenv release-it -- --config .release-it-beta.json",
         "build": "rollup --config rollup.config.js --environment BUILD:production"
     },
     "keywords": [],
