Add release support for Keep A Changelog.

--- a/.release-it-beta.json
+++ b/.release-it-beta.json
@@ -26,6 +26,10 @@
   "plugins": {
     "@release-it/bumper": {
         "out": "manifest-beta.json"
+    },
+    "@release-it/keep-a-changelog": {
+        "addVersionUrl": "true",
+        "keepUnreleased": "true"
     }
   },
   "preRelease": "beta"
