--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "author": "",
     "license": "MIT",
     "devDependencies": {
-        "@release-it/bumper": "^2.0.0",
+        "@release-it/bumper": "^4.0.0",
+        "@release-it/keep-a-changelog": "^3.1.0",
         "@rollup/plugin-commonjs": "^18.0.0",
         "@rollup/plugin-node-resolve": "^11.2.1",
         "@rollup/plugin-typescript": "^8.2.1",
