--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Commands for handling a zettelkasten with Luhmann-style IDs as filenames",
     "main": "main.js",
     "scripts": {
-        "prettier": "prettier --write 'src/**/*.+(ts|tsx|json|html|css)'",
+        "prettier": "prettier --write \"src/**/*.+(ts|tsx|json|html|css)\"",
         "lint": "eslint . --ext .ts,.tsx --fix",
         "dev": "rollup --config rollup.config.js -w",
         "release": "dotenv release-it",
