--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "id": "luhman",
-    "name": "Luhmann",
+    "name": "Luhman",
     "version": "1.1.1",
     "minAppVersion": "0.11.13",
     "description": "Commands for handling a zettelkasten with Luhmann-style IDs as filenames",
